Established base functionality of all pages

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,23 +1,24 @@
 <table style="width: 100%">
     <colgroup>
-        <col style="width:20%"/>
-        <col style="width:80%"/>
+        <col style="width:20%" />
+        <col style="width:80%" />
     </colgroup>
 
     <!-- Header -->
     <tr style="background-color: #212121; color: white">
-
         <!-- First Half of Header -->
         <!-- Logo + Reroute to Home -->
         <td style="text-align: center; border-radius: 1em; padding-right: 1rem">
             <h1 style="font-family: 'MarketDeco'">
                 <!-- Routes to home page -->
-                <a href="../../" style="color: white; text-decoration: none">TEXAS TORQUE</a> 
+                <a href="../../" style="color: white; text-decoration: none"
+                    >TEXAS TORQUE</a
+                >
             </h1>
         </td>
 
         <!-- Second Half of Header -->
-         <!-- Search Bar -->7
+        <!-- Search Bar -->
         <td style="align-content: center; border-radius: 1em;">
             <table style="width: 100%; height:100%;">
                 <td>
@@ -32,13 +33,11 @@
 </table>
 
 <style>
-    table {
-  border-collapse: collapse;
-  border-spacing: 0;
-  margin-bottom: 5px;
-}
-td {
-    margin: 1rem;
-}
-
+    @font-face {
+        font-family: "MarketDeco";
+        src: url("../../public/fonts/market_deco.ttf") format("ttf");
+        font-weight: normal;
+        font-style: normal;
+        font-display: swap;
+    }
 </style>
