--- a/src/components/common_css.css
+++ b/src/components/common_css.css
@@ -14,6 +14,10 @@ a {
 
 img {
     height: auto;
-    width: auto;
+    width: 25%;
     border-radius: 1em;
+}
+
+table, th, td {
+  vertical-align: top;
 }
