cms netlify added, currently open (it works!!!)

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,6 @@ import { getCollection } from "astro:content";
 
 const cad = await getCollection("cad");
 const coding = await getCollection("coding");
-const electrical = await getCollection("electrical");
 const mechanical = await getCollection("mechanical");
 const other = await getCollection("other");
 ---
@@ -29,7 +28,7 @@ const other = await getCollection("other");
             </p>
             <p>
                 If you wish to contribute, talk to your subsection mentor or Mr.
-                Wolf.
+                Wolf. If you have permission, you can edit <a href="/admin">here</a>.
             </p>
         </div>
 
