--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -9,7 +9,7 @@
         <!-- First Half of Header -->
         <!-- Logo + Reroute to Home -->
         <td style="text-align: center; border-radius: 1em; padding-right: 1rem">
-            <h1 style="font-family: 'MarketDeco'">
+            <h1 style="font-family: 'MarketDeco'; font-size: 2.5rem; margin: 1em;">
                 <!-- Routes to home page -->
                 <a href="../../" style="color: white; text-decoration: none"
                     >TEXAS TORQUE</a
